--- a/Marindeck/Strings/ja.lproj/Localizable.strings
+++ b/Marindeck/Strings/ja.lproj/Localizable.strings
@@ -34,10 +34,17 @@
 "settings.logout.cell.title" = "ログアウト";
 
 
-// ActionButtons
+// MARK: ActionButtons
 "actionButton.debug.title" = "デバッグ";
 "actionButton.gif.title" = "GIF";
 "actionButton.tweet.title" = "ツイート";
 "actionButton.menu.title" = "メニュー";
 "actionButton.draft.title" = "ドラフト";
 "actionButton.settings.title" = "設定";
+
+"actionButton.debug.description" = "デバッグモーダルを開く";
+"actionButton.gif.description" = "GIFを選ぶ";
+"actionButton.tweet.description" = "ツイートモーダルを開く";
+"actionButton.menu.description" = "メニューを開く";
+"actionButton.draft.description" = "下書きを開く";
+"actionButton.settings.description" = "設定を開く";
