--- a/Marindeck/Strings/en.lproj/Localizable.strings
+++ b/Marindeck/Strings/en.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "settings.customJS.cell.title" = "Custom JavaScript";
 "settings.customCSS.cell.title" = "Custom CSS";
 "settings.theme.cell.title" = "Themes";
+"settings.customActonButtons.cell.title" = "Custom action buttons";
 
 "settings.termsOfUse.cell.title" = "Team of use";
 "settings.license.cell.title" = "License";
