[update](): SafeAreaを考慮する設定を追加

--- a/Marindeck/Strings/en.lproj/Localizable.strings
+++ b/Marindeck/Strings/en.lproj/Localizable.strings
@@ -15,6 +15,7 @@
 "settings.nativePreview.cell.title" = "Use native preview";
 "settings.biometrics.cell.title" = "Biometrics";
 "settings.nativeTweetModal.cell.title" = "Use native tweet modal";
+"settings.marginSafeArea.cell.title" = "Margin safeArea";
 
 "settings.customJS.cell.title" = "Custom JavaScript";
 "settings.customCSS.cell.title" = "Custom CSS";
