--- a/Marindeck/Strings/ja.lproj/Localizable.strings
+++ b/Marindeck/Strings/ja.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "settings.nativePreview.cell.title" = "ネイティブのプレビューを使用";
 "settings.biometrics.cell.title" = "生体認証";
 "settings.nativeTweetModal.cell.title" = "ネイティブのツイート画面を使用";
+"settings.marginSafeArea.cell.title" = "SafeAreaを考慮する";
 
 "settings.customJS.cell.title" = "カスタムJavaScript";
 "settings.customCSS.cell.title" = "カスタムCSS";
